<resources>
    <string name="app_name">Absensi</string>
    <string name="hello_sign_in_please">Hello, Sign In Please</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="history">History</string>
    <string name="attendance">Attendance</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_location">Current Location</string>
    <string name="defaul_text">-</string>
    <string name="your_photo">Your Photo</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="change_password">Change Password</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
</resources>