<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.person.PersonFragment">

   <com.google.android.material.appbar.AppBarLayout
       android:id="@+id/appbar_profile"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@android:color/transparent"
       app:elevation="0dp"
       app:layout_constraintTop_toTopOf="parent">
       <androidx.appcompat.widget.Toolbar
           android:id="@+id/tb_profile"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@android:color/transparent"
           app:title="@string/profile"
           app:titleTextColor="@android:color/white"
           android:elevation="0dp"/>
   </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_profile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_profile"
                android:layout_marginTop="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/bg_profile"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:padding="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@color/quantum_grey500"/>
                <TextView
                    android:id="@+id/tv_name_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="16dp"
                    android:text="@string/defaul_text"/>
                <TextView
                    android:id="@+id/tv_email_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/defaul_text"/>

                <Button
                    android:id="@+id/btn_profile_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"
                    android:background="@drawable/bt_login"
                    android:textColor="@color/white"
                    android:layout_marginTop="40dp"/>
                <Button
                    android:id="@+id/btn_profile_change_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_language"
                    android:background="@drawable/bt_login"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"/>
                <Button
                    android:id="@+id/btn_profile_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:background="@drawable/bg_logout"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>