<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.changepass.ChangePasswordActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Change Password"
            app:titleTextColor="@color/colorPrimary"
            android:elevation="0dp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_old_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:boxBackgroundMode="none"
        app:layout_constraintTop_toBottomOf="@+id/appbar_forgot_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/old_password"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_new_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:boxBackgroundMode="none"
        app:layout_constraintTop_toBottomOf="@+id/appbar_forgot_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/new_password"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:boxBackgroundMode="none"
        app:layout_constraintTop_toBottomOf="@+id/appbar_forgot_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/confirm_password"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:backgroundTint="@null"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:background="@drawable/bt_login"
        app:layout_constraintTop_toBottomOf="@+id/ti_email_forgot_password"/>
</LinearLayout>